[package]
name = "byrdocs-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
indicatif = "0.17.11"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
